Fix scale on mobile (#38)

--- a/styles/css/navbar-footer.scss
+++ b/styles/css/navbar-footer.scss
@@ -161,6 +161,7 @@ footer {
     a {
       font-size: 30px;
       padding: 15px;
+      text-decoration: none;
     }
     a {
       &:hover,
